--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "react-native-nmap",
-  "version": "0.0.66",
+  "name": "@arthur_noh/react-native-nmap",
+  "version": "0.0.68",
   "description": "react-native bridge for naver map",
   "main": "index.js",
   "author": "QuadFlask",
   "license": "MIT",
-  "homepage": "https://github.com/quadflask/react-native-naver-map",
+  "homepage": "https://github.com/Arthur-Noh/react-native-naver-map",
   "scripts": {
     "start": "react-native start",
     "test": "jest",
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/quadflask/react-native-naver-map"
+    "url": "https://github.com/Arthur-Noh/react-native-naver-map"
   },
   "keywords": [
     "react-native",
