--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@arthur_noh/react-native-nmap",
-  "version": "0.0.68",
+  "version": "0.0.69",
   "description": "react-native bridge for naver map",
   "main": "index.js",
-  "author": "QuadFlask",
+  "author": "Arthur-Noh",
   "license": "MIT",
   "homepage": "https://github.com/Arthur-Noh/react-native-naver-map",
   "scripts": {
